--- a/nameless_sm8250_config.env
+++ b/nameless_sm8250_config.env
@@ -2,7 +2,7 @@ CONFIG_ENV=nameless_sm8250_config.env
 
 KERNEL_SOURCE=https://github.com/Nameless-AOSP-OSS/kernel_oneplus_sm8250
 KERNEL_SOURCE_BRANCH=fourteen
-KERNEL_CONFIG=vendor/kona-perf_defconfig vendor/debugfs.config
+KERNEL_CONFIG=vendor/kona-perf_defconfig
 KERNEL_IMAGE_NAME=Image
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
@@ -60,5 +60,5 @@ ENABLE_CCACHE=true
 NEED_DTBO=false
 
 # Build boot images
-BUILD_BOOT_IMG=false
-SOURCE_BOOT_IMAGE=
+BUILD_BOOT_IMG=true
+SOURCE_BOOT_IMAGE=https://disk.2018wzh.top/f/znF4/boot.img
